seems to not be included package

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style type="text/css">
     @import url("css/reset.css");
-    body { background-color:gray; }
+    body { background-color:white; }
   </style>
 
 </head>
